fixed header css

--- a/Weatherbet/app/assets/stylesheets/application.css.sass
+++ b/Weatherbet/app/assets/stylesheets/application.css.sass
@@ -21,3 +21,16 @@
 .navbar-custom
 	background-color: #7EC0EE
 	border-radius: 0
+
+.navbar-custom a
+	color: white
+	font-weight: bold
+
+.navbar-brand:hover
+	background-color: white
+	color: #7EC0EE
+
+.nav a:hover
+	background-color: white
+	color: #7EC0EE
+
