Setup Rice to call C / C++ from Ruby. Add nessesary files to Cstuff, require custom module from app/controllers/pages_controller, call C/C++ functions from weather.html.erb. PT #134786385

--- a/Weatherbet/app/views/pages/weather.html.erb
+++ b/Weatherbet/app/views/pages/weather.html.erb
@@ -1,2 +1,14 @@
 <h1>Pages#weather</h1>
 <p>Find me in app/views/pages/weather.html.erb</p>
+
+
+<p>The following is generated using ruby wrapped C/C++ :<br />
+
+	<%= "Calling the c++ function RiceTest.new.fibonacci(n) from erb:" %>
+	<p>
+		<%= (1...6).each do |n|  %>
+			<%= "fib(#{n}): #{RiceTest.new.fibonacci(n)}" %> <br />
+		<% end %>
+	</p>
+	Yay! It works...
+</p>
