--- a/Weatherbet/app/views/pages/weather.html.erb
+++ b/Weatherbet/app/views/pages/weather.html.erb
@@ -3,12 +3,50 @@
 
 
 <p>The following is generated using ruby wrapped C/C++ :<br />
-
 	<%= "Calling the c++ function RiceTest.new.fibonacci(n) from erb:" %>
 	<p>
+		<% @stat = RiceTest.new %>
 		<%= (1...6).each do |n|  %>
-			<%= "fib(#{n}): #{RiceTest.new.fibonacci(n)}" %> <br />
-		<% end %>
+			<%= "fib(#{n}): #{@stat.fibonacci(n)}" %> <br />
+		<% end %> <br />
+		<%= "5! = #{@stat.factorial(5)}" %> <br />
+
+		11! = <%= @stat.factorial(11) %>
+		laplace of (2, 2) is @stat.laplace(2,2) <%= @stat.laplace(2,2) %>
 	</p>
 	Yay! It works...
+
+	<p><span>now using classes...</span><br />
+		<% t = WbStat.new %>
+		with <%= t.correct=11 %> correct and 
+		<%= t.total=12 %> total the laplace  probability is 
+		<%= t.laplace %>
+		<br /><br />
+
+		<% t.total=11 %> <br /> 11/11: 
+		<%= t.laplace %>
+
+		<br /><br />
+		for <%= t.correct %> out of <%= t.total %> results in the following method / weight pairs <br />
+		<p>
+			MLE: <%= t.mle %> zscore: <%= t.zscore(t.mle, 0.5, 0.2) %> <br />
+			Jeffreys: <%= t.jeffreys %> zscore: <%= t.zscore(t.jeffreys, 0.5, 0.2) %><br />
+			LaPlace: <%= t.laplace %> zscore: <%= t.zscore(t.laplace, 0.5, 0.2) %>
+
+		<br /><br /><br />
+		<% (1...6).each do |n| %>
+			<p>
+				for <%= t.correct=n %> out of <%= t.total=5 %> results in the following method / weight pairs: <br />
+				<table border=1>
+					<tr><td>method</td><td>percent</td><td>zscore</td></tr>
+					<tr><td>MLE</td><td><%= t.mle %></td><td><%= t.zscore(t.mle, 0.5, 0.2) %></td></tr>
+					<tr><td>Jeffreys</td><td><%= t.jeffreys %></td><td><%= t.zscore(t.jeffreys, 0.5, 0.2) %></td></tr>
+					<tr><td>LaPlace</td><td><%= t.laplace %></td><td><%= t.zscore(t.laplace, 0.5, 0.2) %></td></tr>
+				</table>
+				<% end %> <br />
+			</p>
+
+		</p>
+	</p>
+
 </p>
