--- a/Weatherbet/app/views/pages/weather.html.erb
+++ b/Weatherbet/app/views/pages/weather.html.erb
@@ -36,13 +36,29 @@
 		<br /><br /><br />
 		<% (1...6).each do |n| %>
 			<p>
-				for <%= t.correct=n %> out of <%= t.total=5 %> results in the following method / weight pairs: <br />
+				<%= t.correct=n %> out of <%= t.total=5 %> results in the following method / weight pairs: <br />
 				<table border=1>
-					<tr><td>method</td><td>percent</td><td>zscore</td></tr>
-					<tr><td>MLE</td><td><%= t.mle %></td><td><%= t.zscore(t.mle, 0.5, 0.2) %></td></tr>
-					<tr><td>Jeffreys</td><td><%= t.jeffreys %></td><td><%= t.zscore(t.jeffreys, 0.5, 0.2) %></td></tr>
-					<tr><td>LaPlace</td><td><%= t.laplace %></td><td><%= t.zscore(t.laplace, 0.5, 0.2) %></td></tr>
-				</table>
+					<tr>
+						<td>method</td>
+						<td>percent</td>
+						<td>zscore</td>
+					</tr>
+					<tr>
+						<td>MLE</td>
+						<td><%= (100*t.mle).round(3) %></td>
+						<td><%= t.zscore(t.mle, 0.5, 0.2).round(3) %></td>
+					</tr>
+					<tr>
+						<td>Jeffreys</td>
+						<td><%= (100*t.jeffreys).round(3) %></td>
+						<td><%= t.zscore(t.jeffreys, 0.5, 0.2).round(3) %></td>
+					</tr>
+					<tr>
+						<td>LaPlace</td>
+						<td><%= (100*t.laplace).round(3) %></td>
+						<td><%= t.zscore(t.laplace, 0.5, 0.2).round(3) %></td>
+					</tr>
+				</table><br />
 				<% end %> <br />
 			</p>
 
