--- a/Weatherbet/app/views/layouts/application.html.erb
+++ b/Weatherbet/app/views/layouts/application.html.erb
@@ -19,23 +19,50 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" id='brand' href="#">WB</a>
+		      <!-- <a class="navbar-brand" id='brand' href="#">WB</a> -->
+		      <%= link_to "WB", pages_home_path, class: "navbar-brand", id: 'brand' %>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li class="active"><a href="#home">home <span class="sr-only">(current)</span></a></li>
-		        <li><a href="#weather">weather</a></li>
-		        <li><a href='#locations'>locations</a></li>
+		        <li class="active">
+		        	<!--<a href="#home">home <span class="sr-only">(current)</span></a>-->
+		        	<%= link_to "home", pages_home_path %>
+		        </li>
+		        <li>
+		        	<!--<a href="#weather">weather</a>-->
+		        	<%= link_to "weather", pages_weather_path %>
+		        </li>
+		        <li>
+		        	<!-- <a href='#locations'>locations</a> -->
+		        	<%= link_to "locations", pages_locations_path %>
+		        </li>
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href='#forums'>forums</a></li>
-		        <li><a href="#login">log in</a></li>
+		      	
+		      	<li>
+		      		<a href='#forums'>forums</a>
+		      	</li>
+
+		        <% if user_signed_in? %>
+		        	<li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+		        <% else %>
+		        	<li><%= link_to "Sign in", new_user_session_path %></li>
+		        	<li><%= link_to "Sign up", new_user_registration_path %></li>
+		        <% end %>
+
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
+
+	<% unless notice.blank? %>
+		<%= notice %>
+	<% end %>
+	<% unless alert.blank? %>
+		<%= alert %>
+	<% end %>
 
     <%= yield %>
   </body>
