--- a/Weatherbet/app/views/predictions/_form.html.erb
+++ b/Weatherbet/app/views/predictions/_form.html.erb
@@ -23,7 +23,8 @@
 
   <div class="field">
     <%= f.label :location_id %>
-    <%= f.text_field :location_id %>
+    <!-- <%= f.text_field :location_id %> -->
+    <%= f.collection_select(:location_id, Location.all, :id, :name) %>
   </div>
 
   <div class="actions">
