change report and prediction forms

--- a/Weatherbet/app/views/pages/weather.html.erb
+++ b/Weatherbet/app/views/pages/weather.html.erb
@@ -125,7 +125,7 @@ Predictions(checked): <br />
 <% end %>
 
 <br /><br /> 
-Given a user with <%= user.correct %> predictions out of <%= user.total %> total predictions that user would have the following probabilities of make a correct prediction on the next attempt <br />
+Given a user with <%= user.correct %> correct predictions out of <%= user.total %> total predictions that user would have the following probabilities of make a correct prediction on the next attempt <br />
 <%= user.mle %> using the mle method <br />
 <%= user.jeffreys %> using the Jeffreys method <br />
 <%= user.laplace %> using the LaPlace method <br />
