--- a/Weatherbet/app/views/predictions/index.html.erb
+++ b/Weatherbet/app/views/predictions/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= prediction.start %></td>
         <td><%= prediction.end %></td>
-        <td><%= prediction.location %></td>
+        <td><%= prediction.location.name %></td>
         <td><%= link_to 'Show', prediction %></td>
         <td><%= link_to 'Edit', edit_prediction_path(prediction) %></td>
         <td><%= link_to 'Destroy', prediction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
