--- a/Weatherbet/app/views/reports/index.html.erb
+++ b/Weatherbet/app/views/reports/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= report.start %></td>
         <td><%= report.end %></td>
-        <td><%= report.location %></td>
+        <td><%= report.location.name %></td>
         <td><%= link_to 'Show', report %></td>
         <td><%= link_to 'Edit', edit_report_path(report) %></td>
         <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
