home page and log in page

--- a/Weatherbet/app/assets/stylesheets/application.css.sass
+++ b/Weatherbet/app/assets/stylesheets/application.css.sass
@@ -19,8 +19,9 @@
 @import "bootstrap"
 
 .navbar-custom
-	background-color: #7EC0EE
+	background-color: black
 	border-radius: 0
+	margin-bottom: 0
 
 .navbar-custom a
 	color: white
