--- a/Weatherbet/app/views/pages/home.html.erb
+++ b/Weatherbet/app/views/pages/home.html.erb
@@ -1,2 +1,112 @@
-<!-- nav moved to app/views/pages/application.html.erb -->
-This is the homepage...
+<div class=''>
+
+<div class='jumbotron'> 
+	<div class='container'>
+	<div class='jumbo-text'>
+		<h1> Welcome to Weatherbet </h1>
+		<h3> Let us do the planning for you. </h3> 
+		<button type="button" class="btn btn-message"> Get Started </button>
+		<!-- <a class='btn btn-message' href='#'> Get Started </a> -->
+	</div>
+	</div>
+</div>
+
+<div class='home-panels'>
+	<div class='container'>
+		<div class='row'>
+
+			<div class='col-sm-4 col-md-4 col-lg-4'>
+			<div class='panel panel-default panel-all'>
+				<div class='panel-body'>
+                   	<img class='img-circle skill-img-resizer' src="assets/locations_panel.jpg">
+                    <br>
+                    <h3>Locations</h3>
+                    <p> Anything you want, wherever you want it. </p>
+                </div>
+
+			</div>
+			</div>
+
+			<div class='col-sm-4 col-md-4 col-lg-4'>
+				<div class='panel panel-default panel-all'>
+				<div class='panel-body'>
+                   	<img class='img-circle skill-img-resizer' src="assets/weather_panel.png">
+                    <br>
+                    <h3>Weather</h3>
+                    <p> Information at your fingertips, in a multitude of customizable varieties.</p>
+                </div>
+
+			</div>
+			</div>
+
+			<div class='col-sm-4 col-md-4 col-lg-4'>
+				<div class='panel panel-default panel-all'>
+				<div class='panel-body'>
+                   	<img class='img-circle skill-img-resizer' src="assets/crowdsource_panel.jpg">
+                    <br>
+                    <h3>Croudsourcing</h3>
+                    <p> Because a million heads are better than one. </p>
+                </div>
+
+			</div>
+			</div>
+		</div>
+
+		<div class='row'>
+
+			<div class='col-sm-4 col-md-4 col-lg-4'>
+			<div class='panel panel-default panel-all'>
+				<div class='panel-body'>
+                   	<img class='img-circle skill-img-resizer' src="assets/discuss_panel.jpg">
+                    <br>
+                    <h3>Discuss</h3>
+                    <p> Build a community around what you love, together. </p>
+                </div>
+
+			</div>
+			</div>
+
+			<div class='col-sm-4 col-md-4 col-lg-4'>
+				<div class='panel panel-default panel-all'>
+				<div class='panel-body'>
+                   	<img class='img-circle skill-img-resizer' src="assets/vote_panel.jpg">
+                    <br>
+                    <h3>Vote</h3>
+                    <p> Help yourself, and others.</p>
+                </div>
+
+			</div>
+			</div>
+
+			<div class='col-sm-4 col-md-4 col-lg-4'>
+				<div class='panel panel-default panel-all'>
+				<div class='panel-body'>
+                   	<img class='img-circle skill-img-resizer' src="assets/progress.jpg">
+                    <br>
+                    <h3>Rank Up!</h3>
+                    <p> The better you are are forecasting, the louder your vote. </p>
+                </div>
+
+			</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- <div class='expos'>
+<div class='expos-title'>
+	<h2> What we do </h2>
+	<p> WeatherBet is a social media platform that enables users to share their expertise on the viability of an activity at a desired location.</p>
+
+	<p> Unsure if paragliding at the Grand Canyon is a good idea? Instead of getting a second opinion, why not listen to what thousands of seasoned veterans have to say? </p>
+
+	<p> Want to give back? Vote to let other user's know if an activity is feasible at a given location based on factors such as time of day, weather, etc! </p>
+
+</div>
+</div> -->
+<footer>
+<div class='footer'>
+
+</div>
+</footer>
+</div>
