fix img links on home page and redirect /pages/locations to /locations

--- a/Weatherbet/app/views/pages/home.html.erb
+++ b/Weatherbet/app/views/pages/home.html.erb
@@ -18,7 +18,8 @@
 			<div class='col-sm-4 col-md-4 col-lg-4'>
 			<div class='panel panel-default panel-all'>
 				<div class='panel-body'>
-                   	<img class='img-circle skill-img-resizer' src="assets/locations_panel.jpg">
+                   	<img class='img-circle skill-img-resizer' src="/assets/locations_panel.jpg" >
+
                     <br>
                     <h3>Locations</h3>
                     <p> Anything you want, wherever you want it. </p>
@@ -30,7 +31,7 @@
 			<div class='col-sm-4 col-md-4 col-lg-4'>
 				<div class='panel panel-default panel-all'>
 				<div class='panel-body'>
-                   	<img class='img-circle skill-img-resizer' src="assets/weather_panel.png">
+                   	<img class='img-circle skill-img-resizer' src="/assets/weather_panel.png" >
                     <br>
                     <h3>Weather</h3>
                     <p> Information at your fingertips, in a multitude of customizable varieties.</p>
@@ -42,7 +43,7 @@
 			<div class='col-sm-4 col-md-4 col-lg-4'>
 				<div class='panel panel-default panel-all'>
 				<div class='panel-body'>
-                   	<img class='img-circle skill-img-resizer' src="assets/crowdsource_panel.jpg">
+                   	<img class='img-circle skill-img-resizer' src="/assets/crowdsource_panel.jpg">
                     <br>
                     <h3>Croudsourcing</h3>
                     <p> Because a million heads are better than one. </p>
@@ -57,7 +58,7 @@
 			<div class='col-sm-4 col-md-4 col-lg-4'>
 			<div class='panel panel-default panel-all'>
 				<div class='panel-body'>
-                   	<img class='img-circle skill-img-resizer' src="assets/discuss_panel.jpg">
+                   	<img class='img-circle skill-img-resizer' src="/assets/discuss_panel.jpg">
                     <br>
                     <h3>Discuss</h3>
                     <p> Build a community around what you love, together. </p>
@@ -69,7 +70,7 @@
 			<div class='col-sm-4 col-md-4 col-lg-4'>
 				<div class='panel panel-default panel-all'>
 				<div class='panel-body'>
-                   	<img class='img-circle skill-img-resizer' src="assets/vote_panel.jpg">
+                   	<img class='img-circle skill-img-resizer' src="/assets/vote_panel.jpg">
                     <br>
                     <h3>Vote</h3>
                     <p> Help yourself, and others.</p>
@@ -81,7 +82,7 @@
 			<div class='col-sm-4 col-md-4 col-lg-4'>
 				<div class='panel panel-default panel-all'>
 				<div class='panel-body'>
-                   	<img class='img-circle skill-img-resizer' src="assets/progress.jpg">
+                   	<img class='img-circle skill-img-resizer' src="/assets/progress.jpg">
                     <br>
                     <h3>Rank Up!</h3>
                     <p> The better you are are forecasting, the louder your vote. </p>
