--- a/Weatherbet/app/views/layouts/application.html.erb
+++ b/Weatherbet/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
 		      	</li>
 
 		        <% if user_signed_in? %>
-		        	<li><%= link_to current_user.email, "#" %></li>
+		        	<li><%= link_to current_user.email, users_show_path %></li>
 		        	<li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
 		        <% else %>
 		        	<li><%= link_to "Sign in", new_user_session_path %></li>
