unbrake weather.html.erb

--- a/Weatherbet/app/views/pages/weather.html.erb
+++ b/Weatherbet/app/views/pages/weather.html.erb
@@ -1,8 +1,6 @@
 <h1>Pages#weather</h1>
 <p>Find me in app/views/pages/weather.html.erb</p>
 
-<<<<<<< HEAD
-=======
 
 <p>The following is generated using ruby wrapped C/C++ :<br />
 	<%= "Calling the c++ function RiceTest.new.fibonacci(n) from erb:" %>
@@ -154,7 +152,7 @@ Given a user with <%= user.correct %> correct predictions out of <%= user.total 
 
 
 
-<% if user_signed_in? %>
+<% if false and user_signed_in? %>
 	<p>
 
 	The current user: <%= @user.email %> has made <%= @predictions.count %> predictions of which <%= @usrStats.correct %> where correct. This implies that the probability of <%= @user.email %> making a correct prediction on the next attempt is: <br />
@@ -166,7 +164,3 @@ Given a user with <%= user.correct %> correct predictions out of <%= user.total 
 <% end %>
 
 
-
-
-
->>>>>>> masterJack
