no errors, but 21 min pageload

--- a/Weatherbet/app/views/pages/weather.html.erb
+++ b/Weatherbet/app/views/pages/weather.html.erb
@@ -1,168 +1,15 @@
 <h1>Pages#weather</h1>
 <p>Find me in app/views/pages/weather.html.erb</p>
 
+<table>
+<% @hours.each do |h| %>
+<tr>
+	<td><%= h.instance_variable_get(:@fin) %></td>
+	<% h.each do |loc| %> 
+		<!-- <td><%= loc.name %> </td> -->
+		<td><%= loc.score %> </td>
 
-<p>The following is generated using ruby wrapped C/C++ :<br />
-	<%= "Calling the c++ function RiceTest.new.fibonacci(n) from erb:" %>
-	<p>
-		<% @stat = RiceTest.new %>
-		<%= (1...6).each do |n|  %>
-			<%= "fib(#{n}): #{@stat.fibonacci(n)}" %> <br />
-		<% end %> <br />
-		<%= "5! = #{@stat.factorial(5)}" %> <br />
-
-		11! = <%= @stat.factorial(11) %>
-		laplace of (2, 2) is @stat.laplace(2,2) <%= @stat.laplace(2,2) %>
-	</p>
-	Yay! It works...
-
-	<p><span>now using classes...</span><br />
-		<% t = WbStat.new %>
-		with <%= t.correct=11 %> correct and 
-		<%= t.total=12 %> total the laplace  probability is 
-		<%= t.laplace %>
-		<br /><br />
-
-		<% t.total=11 %> <br /> 11/11: 
-		<%= t.laplace %>
-
-		<br /><br />
-		for <%= t.correct %> out of <%= t.total %> results in the following method / weight pairs <br />
-		<p>
-			MLE: <%= t.mle %> zscore: <%= t.zscore(t.mle, 0.5, 0.2) %> <br />
-			Jeffreys: <%= t.jeffreys %> zscore: <%= t.zscore(t.jeffreys, 0.5, 0.2) %><br />
-			LaPlace: <%= t.laplace %> zscore: <%= t.zscore(t.laplace, 0.5, 0.2) %>
-
-		<br /><br /><br />
-		<% (1...6).each do |n| %>
-			<p>
-				<%= t.correct=n %> out of <%= t.total=5 %> results in the following method / weight pairs: <br />
-				<table border=1>
-					<tr>
-						<td>method</td>
-						<td>percent</td>
-						<td>zscore</td>
-					</tr>
-					<tr>
-						<td>MLE</td>
-						<td><%= (100*t.mle).round(3) %></td>
-						<td><%= t.zscore(t.mle, 0.5, 0.2).round(3) %></td>
-					</tr>
-					<tr>
-						<td>Jeffreys</td>
-						<td><%= (100*t.jeffreys).round(3) %></td>
-						<td><%= t.zscore(t.jeffreys, 0.5, 0.2).round(3) %></td>
-					</tr>
-					<tr>
-						<td>LaPlace</td>
-						<td><%= (100*t.laplace).round(3) %></td>
-						<td><%= t.zscore(t.laplace, 0.5, 0.2).round(3) %></td>
-					</tr>
-				</table><br />
-				<% end %> <br />
-			</p>
-
-		</p>
-	</p>
-
-</p>
-
-
-<p>
-Predictions: <br />
-<% Prediction.all.each do |p| %>
-	<%= "It will be flyable at #{p.location.name} from #{p.start} to #{p.end}." %> <br />
-<% end %>
-</p>
-<p>
-Reports: <br />
-<% Report.all.each do |p| %>
-	<%= "It was flyable at #{p.location.name} from #{p.start} to #{p.end}." %> <br />
-<% end %>
-</p>
-
-<p>
-Reports(Brace): <br />
-<% Report.where(location: 2).each do |p| %>
-	<%= "It was flyable at #{p.location.name} from #{p.start} to #{p.end}." %> <br />
-<% end %>
-</p>
-
-<p>
-Reports(Ellenville): <br />
-<% Report.where(location: 1).each do |p| %>
-	<%= "It was flyable at #{p.location.name} from #{p.start} to #{p.end}." %> <br />
-<% end %>
-</p>
-
-
-
-
-
-<p>
-<% user = WbStat.new %>
-<% user.correct=0 %>
-
-Given a user with the <%= user.total = Prediction.count %> following
-Predictions(checked): <br />
-
-<% Prediction.all.each do |p| %>
-	set-><%= isTrue = false %>
-	<%= "Prediction: \"It will be flyable at #{p.location.name} from #{p.start} to #{p.end}.\"" %> 
-	<% Report.where(location: p.location).each do |r| %>
-		<% sINr =(r.start < p.start and p.start < r.end) %>
-		<% eINr =(r.start < p.end and p.start < r.end) %>
-		compute-><%= isTrue = (isTrue or sINr or eINr) %>
-		<br /><%= "#{r.start} < #{p.start} < #{r.end} (#{sINr}) OR #{r.start} < #{p.end} < #{r.end} (#{eINr}) = #{sINr or eINr}" %>
-	<% end %> <br />
-	Hence, given the above reports, the prediction, <%= "\"It will be flyable at #{p.location.name} from #{p.start} to #{p.end}.\" is" %> <strong><%= isTrue %></strong>. 
-
-	<% if isTrue %>
-		<% user.correct+=1 %>
 	<% end %>
-
-	<br/><br />
+</tr>
 <% end %>
-
-<br /><br /> 
-Given a user with <%= user.correct %> correct predictions out of <%= user.total %> total predictions that user would have the following probabilities of make a correct prediction on the next attempt <br />
-<%= user.mle %> using the mle method <br />
-<%= user.jeffreys %> using the Jeffreys method <br />
-<%= user.laplace %> using the LaPlace method <br />
-
-</p>
-
-<% (1...4).each do |i| %>
-	<p>
-	Name: <%= Faker::Name.last_name %>, <%= Faker::Name.first_name %> <br /> Phone: <%= Faker::PhoneNumber.cell_phone %><br />
-	Statement: I am a cool hacker guy which means I say stuff like, "<%= Faker::Hacker.say_something_smart %>" and, "<%= "I'm going to need to #{Faker::Hacker.verb} the #{Faker::Hacker.noun} so we can get some #{Faker::Hacker.adjective} #{Faker::Hacker.abbreviation} up in this #{Faker::Hacker.ingverb} #{Faker::Hacker.noun}" %>."
-	</p>
-
-	<p>
-	Name: <%= Faker::Name.last_name %>, <%= Faker::Name.first_name %> <br /> Phone: <%= Faker::PhoneNumber.cell_phone %><br />
-	Statement: I am a cool hipster guy which means I say stuff like, "<%= Faker::Hipster.paragraph %>"
-	</p>
-	
-	<p>
-	Name: <%= Faker::Name.last_name %>, <%= Faker::Name.first_name %> <br /> Phone: <%= Faker::PhoneNumber.cell_phone %><br />
-	Statement: I am a cool guy from a galaxy far far away which means I say stuff like, "<%= Faker::StarWars.quote %>"
-	</p>
-	
-<% end %>
-
-
-
-<% if false and user_signed_in? %>
-	<p>
-
-	The current user: <%= @user.email %> has made <%= @predictions.count %> predictions of which <%= @usrStats.correct %> where correct. This implies that the probability of <%= @user.email %> making a correct prediction on the next attempt is: <br />
-	<%= @usrStats.mle %> using the mle method <br />
-	<%= @usrStats.jeffreys %> using the Jeffreys method <br />
-	<%= @usrStats.laplace %> using the LaPlace method <br />
-
-	</p>
-<% end %>
-
-
-
-
+</table>
