--- a/Weatherbet/app/views/predictions/show.html.erb
+++ b/Weatherbet/app/views/predictions/show.html.erb
@@ -20,15 +20,24 @@
   <%= @prediction.user.email %>
 </p>
 
-<% @reports.order(:start).find_each do |s| %>
-	<%= s.start %> 
-	<%= s.end %> 
-	<%= s.user.email %> 
-	<br />
-<%end %>
-<%= @reports.any? %>
-<%= @prediction.check %>
-<br />
+<% if @prediction.check %>
+<% #if reports.any? %>
+	<p><strong>Confirming Reports:</strong>
+	<ul>
+	<% @prediction.getReleventReports.order(:start).find_each do |s| %>
+		<li>
+		<%= s.start %> 
+		<%= s.end %> 
+		<%= s.user.email %> 
+		</li>
+	<%end %>
+	</ul>
+	</p>
+<% end %>
+
 
 <%= link_to 'Edit', edit_prediction_path(@prediction) %> |
 <%= link_to 'Back', predictions_path %>
+
+
+
