--- a/Weatherbet/app/views/predictions/index.html.erb
+++ b/Weatherbet/app/views/predictions/index.html.erb
@@ -23,14 +23,14 @@
           <% if prediction.check %>
             √ <%= i+=1 %>
             <ul>
-                <% @prediction.getReleventReports.order(:start).find_each do |s| %>
+                <% @prediction.getConfirmingReports.order(:start).find_each do |s| %>
                   <li>
                 <%= s.start %> 
                 <%= s.end %> 
                 <%= s.user.email %> 
                 </li>
               <% end %>
-              <% prediction.getReleventReports.find_each do |r| %>
+              <% prediction.getConfirmingReports.find_each do |r| %>
                 <li><%= r.start.hour %>:00 to <%= r.end.hour %>:00 by <%= r.user.email %></li>
               <% end %>
             </ul>
