--- a/Weatherbet/app/views/users/show.html.erb
+++ b/Weatherbet/app/views/users/show.html.erb
@@ -30,7 +30,7 @@ You have made <strong><%= @predictions.count %></strong> predictions, of which <
     <% if prediction.check %>
       <strong>√<%= j+=1 %></strong>
       <ul>
-          <% prediction.getReleventReports.order(:start).find_each do |s| %>
+          <% prediction.getConfirmingReports.order(:start).find_each do |s| %>
           <li>
           <%= s.start %> 
           <%= s.end %> 
