--- a/Weatherbet/app/views/locations/show.html.erb
+++ b/Weatherbet/app/views/locations/show.html.erb
@@ -5,5 +5,24 @@
   <%= @location.name %>
 </p>
 
+
+<% min = @location.predictions.order(:start).first %>
+<% max = @location.predictions.order(:start).last %>
+<% scaleFactor = 90.0/((max.start.month-min.start.month-1)*33.33+max.start.day+max.start.hour/24.0) %>
+<% @location.predictions.order(:start).each do |p| %>
+<span style="
+	position: absolute; 
+	display:inline-block; 
+	left: <%= scaleFactor*((p.start.month-min.start.month-1)*30.333+p.start.day+p.start.hour/24.0) %>%;
+	">
+
+<%= ((@location.getProbability(p.start))/20.0).round(2) %>% 
+
+<%= link_to "#{p.start.hour}:00 to #{p.end.hour}:00 on #{p.start.month} / #{p.start.day} / #{p.start.year}", prediction_path(p) %>
+
+</span>
+<br />
+<% end %>
+
 <%= link_to 'Edit', edit_location_path(@location) %> |
 <%= link_to 'Back', locations_path %>
