--- a/Weatherbet/app/views/users/show.html.erb
+++ b/Weatherbet/app/views/users/show.html.erb
@@ -6,7 +6,8 @@
 <br />
 <p>
 <h4>
-You have made <strong><%= @usrStats.total %></strong> predictions, of which <strong><%= @usrStats.correct %></strong> where correct. </h4> This implies that the probability of your next prediction being correct is: <br />
+You have made <strong><%= @usrStats.total %></strong> predictions, of which <strong><%= @usrStats.correct %></strong> where correct. </h4> This implies that the probability of your next prediction being correct is: <%= current_user.getWeight %><br />
+
 <p>
 <strong><%= @usrStats.mle.round(3) %></strong> using the mle method <br />
 <strong><%= @usrStats.jeffreys.round(3) %></strong> using the Jeffreys method <br />
