--- a/Weatherbet/app/views/locations/_form.html.erb
+++ b/Weatherbet/app/views/locations/_form.html.erb
@@ -16,6 +16,16 @@
     <%= f.text_field :name %>
   </div>
 
+  <div class="field">
+    <%= f.label :lat %>
+    <%= f.number_field :lat, :step => 0.0000001 %>
+  </div>
+
+  <div class="field">
+    <%= f.label :lng %>
+    <%= f.number_field :lng, :step => 0.0000001 %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
