--- a/Weatherbet/app/views/layouts/application.html.erb
+++ b/Weatherbet/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title>Weatherbet</title>
     <%= csrf_meta_tags %>
 
+   <%= javascript_include_tag "https://www.google.com/jsapi" %>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
