--- a/Weatherbet/app/views/pages/weather.html.erb
+++ b/Weatherbet/app/views/pages/weather.html.erb
@@ -2,6 +2,12 @@
 <p>Find me in app/views/pages/weather.html.erb</p>
 
 
+<%= timeline [
+  ["Washington", "1789-04-29", "1797-03-03"],
+  ["Adams", "1797-03-03", "1801-03-03"],
+  ["Jefferson", "1801-03-03", "1809-03-03"]
+] %>
+
 
 
 
