preliminary profile changes

--- a/Weatherbet/app/views/pages/home.html.erb
+++ b/Weatherbet/app/views/pages/home.html.erb
@@ -45,7 +45,7 @@
 				<div class='panel-body'>
                    	<img class='img-circle skill-img-resizer' src="/assets/crowdsource_panel.jpg">
                     <br>
-                    <h3>Croudsourcing</h3>
+                    <h3>Crowdsourcing</h3>
                     <p> Because a million heads are better than one. </p>
                 </div>
 
